--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/react-native": "^0.70.8",
+    "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^4.9.4"
   },
   "private": true
